--- a/package.json
+++ b/package.json
@@ -1,14 +1,16 @@
 {
-  "name": "aula01-mocks",
+  "name": "aula02-stubs",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
+  "dependencies": {},
+  "devDependencies": {
+    "sinon": "^9.2.4"
+  },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
+  "keywords": [],
   "author": "",
-  "license": "ISC",
-  "dependencies": {
-    "fs": "0.0.1-security"
-  }
+  "license": "ISC"
 }
