--- a/package.json
+++ b/package.json
@@ -1,14 +1,15 @@
 {
-  "name": "aula01-mocks",
+  "name": "aula03-spies",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
+  "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "fs": "0.0.1-security"
+    "sinon": "^9.2.4"
   }
 }
